Avoid code path that leaves local config locked

The local config file gets locked on line 415, if we return early we
need to unlock it.

REVIEW: 122549
BUG: 344032